cmake_minimum_required(VERSION 3.21 FATAL_ERROR)

if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
set(HOME $ENV{USERPROFILE})
set(CONDA_LIB "Library")
else()
set(HOME $ENV{HOME})
set(CONDA_LIB "")
endif()

if(EXISTS "${HOME}/.conda/envs/psnr_hvsm-dev")
    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${HOME}/.conda/envs/psnr_hvsm-dev/${CONDA_LIB}")
endif()
if(EXISTS "${HOME}/Miniforge3/envs/psnr_hvsm-dev")
    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${HOME}/Miniforge3/envs/psnr_hvsm-dev/${CONDA_LIB}")
endif()
if(EXISTS "$ENV{CONDA}/envs/psnr_hvsm-dev")
    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};$ENV{CONDA}/envs/psnr_hvsm-dev/${CONDA_LIB}")
endif()
if(EXISTS "${CMAKE_SOURCE_DIR}/.third_party")
    set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${CMAKE_SOURCE_DIR}/.third_party")
endif()

if(NOT DEFINED SKBUILD_PROJECT_NAME)
    set(SKBUILD_PROJECT_NAME psnr_hvsm)
endif()

project(${SKBUILD_PROJECT_NAME} LANGUAGES CXX)

add_subdirectory(psnr_hvsm)
