[build-system]
requires = [
    "cmake>=3.21",
    "scikit-build-core",
    "numpy >= 1.18",
    'msvc-runtime >= 14; platform_system == "Windows"'
]
build-backend = "scikit_build_core.build"

[project]
name = "psnr_hvsm"
version = "0.2.1"
authors = [{name = "Karol Trojanowski", email = "trojanowski.ifuj@gmail.com"}]
description = "Accelerated implementations of the PSNR-HVS, PSNR-HVS-M, PSNR-HA and PSNR-HMA image metrics for NumPy and PyTorch"
license = {text = "MIT"}
keywords = ["psnr hvs video image metric pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">= 3.7, <4"
dependencies = [
    "numpy >= 1.18,<2",
    'msvc-runtime >= 14; platform_system == "Windows"',
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/lyckantropen/psnr_hvsm"

[project.optional-dependencies]
tests = [
    "pytest",
    "scipy",
    "imageio",
]
command_line = ["imageio", "tqdm"]
torch = ["torch", "torch-dct>=0.1.6"]

[tool.scikit-build]
editable.mode = "redirect"
cmake.build-type = "RelWithDebInfo"
cmake.args = [ "-DCMAKE_POSITION_INDEPENDENT_CODE=ON" ]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max_line_length = "160"

[tool.autopep8]
max_line_length = "160"