[metadata]
name = psnr_hvsm
version = 0.0.3
url = https://github.com/lyckantropen/psnr_hvsm
author = Karol Trojanowski
author_email = trojanowski.ifuj@gmail.com
description = Accelerated implementation of the PSNR-HVS-M image metric
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psnr hvs video image metric
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    License :: GPL 3.0

[options]
python_requires = >= 3.6, <4
install_requires =
    numpy >= 1.18
    msvc-runtime >= 14; platform_system == "Windows"

[options.extras_require]
tests =
    pytest
    scipy

[tool:pytest]
testpaths = tests
