[metadata]
name = psnr_hvsm
version = 0.0.5
url = https://github.com/lyckantropen/psnr_hvsm
author = Karol Trojanowski
author_email = trojanowski.ifuj@gmail.com
description = Accelerated implementation of the PSNR-HVS-M image metric
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psnr hvs video image metric
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: C++
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing

[options]
python_requires = >= 3.6, <4
install_requires =
    numpy >= 1.18
    msvc-runtime >= 14; platform_system == "Windows"

[options.extras_require]
tests =
    pytest
    scipy
    opencv-python-headless

[tool:pytest]
testpaths = tests
